--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.clip-triangle {
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0% 100%);
+  }
+  
